devops/k8s/manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gr8-plain-frontend
  labels:
    app.kubernetes.io/name: gr8
    app.kubernetes.io/instance: gr8-plain
    app.kubernetes.io/part-of: gr8
    app.kubernetes.io/component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gr8
      app.kubernetes.io/instance: gr8-plain
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gr8
        app.kubernetes.io/instance: gr8-plain
        app.kubernetes.io/part-of: gr8
        app.kubernetes.io/component: frontend
      annotations:
        gr8.k3s/release-revision: "1"
    spec:
      imagePullSecrets:
        - name: gitlab-registry
      containers:
        - name: frontend
          image: registry.chas-lab.dev/chas-challenge-2026/grupp-8/project/frontend:develop
          imagePullpolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
            requests:
              cpu: 10m
              memory: 64Mi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDeplaySeconds: 10
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDeplaySeconds: 5
            periodSeconds: 10
