devops/k8s/manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gr8-plain-frontend
  labels:
    app.kubernetes.io/name: gr8
    app.kubernetes.io/instance: gr8-plain
    app.kubernetes.io/part-of: gr8
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: gr8
    app.kubernetes.io/instance: gr8-plain
    app.kubernetes.io/component: frontend
